[metadata]
name = cognito_token_validator
version = 0.1.0
author = Dhinesh Kumar Sundaram
author_email = dhinesh.gs@gmail.com
description = A package for validating AWS Cognito tokens and using them as decorators in Flask routes or standalone Python functions
license = MIT
home-page = https://github.com/dhinesh03/cognito-token-validator